tests/files/lexer_tests/should_fail/072.cmdr
a = $"Unterminated command in format {`echo "hello"} right here";